minor fixes - no results

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
   <h1>Hello World!!!!!!!!!!!!!!!!!!</h1>
 
-  <button class="run-search">Search</button>
+  <button class="search-button" id="run-search">Search</button>
  
 </body>
 
