Trying to get proper responses from API's

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 
 <body>
+  <script src="https://code.jquery.com/jquery.js"></script>
  
   <h1>Hello World!!!!!!!!!!!!!!!!!!</h1>
 
   <button class="search-button" id="run-search">Search</button>
- 
+
+  <script src="script.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
 </body>
 
 </html>
