added header swap function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <h1>Your Local Sports Page</h1>
+            <h1 id="header">Your Local Sports Page</h1>
         </header>
 
         <main>
