Header update functionality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </head>
 
     <body>
-        <header>
-            <h1>Your Local Sports Page</h1>
+        <header id="header-id">
+            <h1 id="replace-header">Your Local Sports Page</h1>
         </header>
 
         <main>
