--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <body>
         <header>
-            <h1 id="header">Your Local Sports Page</h1>
+            <div id="header">
+                Your Local Sports Page
+            </div>
         </header>
 
         <main>
