--- a/index.html
+++ b/index.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-    <head>
-        <meta charset="utf-8" />
-        <link rel="stylesheet" href="./style.css" />
-        <title>Your Local Sports Page</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Your Local Sports Page</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+</head>
 
-    <body>
-        <header id="header-id">
-            <h1 id="replace-header">Your Local Sports Page</h1>
-        </header>
-
-        <main>
-            <form id="city-search-form">
-                <label id="title-text" for="search-city">Search a city:</label>
-                <div class="input-group">
-                    <input type="text" id="search-city" class="form-control">
-                    <div class="input-group-append">
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                            <!-- <i class="material-icons right">send</i> -->
-                            </button>
-                        </button>
-                    </div>
+<body>
+    <header>
+        <div id="header">
+            Your Local Sports Page
+        </div>
+    </header>
+    <main>
+        <form id="city-search-form">
+            <label id="title-text" for="search-city">Search a city:</label>
+            <div class="input-group">
+                <input type="text" id="search-city" class="form-control">
+                <div class="input-group-append">
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <!-- <i class="material-icons right">send</i> -->
+                    </button>
                 </div>
-            </form>
-            <div id="team-selection"></div>
-            <div id="info-options"></div>
-            <div id="results"></div>
-        </main>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-        <!-- 8-6-20 Bootstrap JS -->
-        <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+            </div>
+            <p>
+                If you're an avid <span>sports</span> fan, who's<br>
+                recently moved, visiting town, or just plain<br>
+                curious about what's <span>happening</span><br>
+                in your own town, then …<br>
+                this app is <span>for you</span>!<br><br>
+                Find out <span>all the local sports</span>,<br>
+                taking place this week ...<br>
+                <span>at your fingertips</span>!<br>
+            </p>
+        </form>
+        <div id="team-selection"></div>
+        <div id="info-options"></div>
+        <div id="results"></div>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- 8-6-20 Bootstrap JS -->
+    <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
-        
-        <script type="text/javascript" src="./script.js"></script>
-
-    </body>
+    <script type="text/javascript" src="./script.js"></script>
+</body>
 
 </html>
