--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
                 </div>
 
             </div>
+
+<br><br><br><br>
+
+            <footer>
+
+                <p1>Made with ❤️️ by Danny, Christian, JackRyan, & Michael</p1>
+                    
+              </footer>
+
         </main>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
